Applications/Grafana/components/_application/resources/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grafana
  labels:
    app.kubernetes.io/component: 'application'  # The component within the architecture
spec:
  revisionHistoryLimit: 3
  replicas: 0
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 0
      maxUnavailable: 1
  template:
    metadata:
      labels:
        app.kubernetes.io/component: 'application'  # The component within the architecture
    spec:
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      securityContext:
        fsGroup: 472
        supplementalGroups:
          - 0
      containers:
        - name: grafana
          image: grafana/grafana:0.0.0
          imagePullPolicy: IfNotPresent
          securityContext:
            runAsNonRoot: true
            allowPrivilegeEscalation: false
            runAsUser: 472
            runAsGroup: 472
            capabilities:
              drop:
                - ALL
            seccompProfile:
              type: RuntimeDefault
            readOnlyRootFilesystem: false
          resources:
            requests:
              cpu: 0.2
              memory: 256Mi
            limits:
              cpu: 1
              memory: 2Gi
          ports:
            - containerPort: 3000
              protocol: TCP
              name: grafana
            - containerPort: 9094
              protocol: TCP
              name: gossip-tcp
            - containerPort: 9094
              protocol: UDP
              name: gossip-udp
          startupProbe:
            httpGet:
              path: /robots.txt
              port: grafana
              scheme: HTTP
            initialDelaySeconds: 5
            periodSeconds: 5
            timeoutSeconds: 2
            successThreshold: 1
            failureThreshold: 30
          readinessProbe:
            httpGet:
              path: /robots.txt
              port: grafana
              scheme: HTTP
            initialDelaySeconds: 5
            periodSeconds: 5
            timeoutSeconds: 2
            successThreshold: 1
            failureThreshold: 3
          livenessProbe:
            httpGet:
              path: /robots.txt
              port: grafana
              scheme: HTTP
            initialDelaySeconds: 30
            periodSeconds: 60
            timeoutSeconds: 2
            successThreshold: 1
            failureThreshold: 3
