Applications/Grafana/components/_application/resources/service-alerting.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: grafana-alerting
  labels:
    app.kubernetes.io/component: 'application'
spec:
  selector:
    app.kubernetes.io/component: 'application'
  clusterIP: None
  ports:
    - protocol: TCP
      port: 9094
      targetPort: 9094
      name: gossip-tcp
    - protocol: UDP
      port: 9094
      targetPort: 9094
      name: gossip-udp
  type: ClusterIP
