Applications/Grafana/components/_application/resources/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: grafana
  labels:
    app.kubernetes.io/component: 'application'
spec:
  selector:
    app.kubernetes.io/component: 'application'
  clusterIP: None
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
      name: grafana
  type: ClusterIP
